--- a/src/app/video-display/video-display.component.css
+++ b/src/app/video-display/video-display.component.css
@@ -1,7 +1,3 @@
-:root {
-  --youtube-red: #FE0900;
-}
-
 @media screen and (min-width: 100vw) {
   #video {
     width: 100vw;
@@ -26,17 +22,6 @@
 
 .seek-tooltip {
   position: absolute;
-}
-
-
-.video-container {
-  width: 800px;
-  border-radius: 4px;
-  margin: 0 auto;
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
 }
 
 video {
@@ -64,6 +49,10 @@ video {
   position: relative;
   height: 8.4px;
   margin-bottom: 10px;
+}
+
+.time {
+  margin: -23px 0 0 180px;
 }
 
 progress {
@@ -134,6 +123,11 @@ progress::-moz-progress-bar {
   display: flex;
   align-items: center;
   margin-right: 10px;
+}
+
+.volume-button,
+time {
+  color: #fff;
 }
 
 .volume-controls input {
@@ -225,7 +219,7 @@ input[type=range]:focus::-webkit-slider-runnable-track {
 
 input[type=range].volume {
   height: 5px;
-  background-color: #202020;
+  background-color: #fff;
 }
 
 input[type=range].volume::-webkit-slider-runnable-track {
@@ -236,7 +230,7 @@ input[type=range].volume::-webkit-slider-thumb {
   margin-left: 0;
   height: 14px;
   width: 14px;
-  background: #202020;
+  background: #fff;
 }
 
 input[type=range]::-moz-range-track {
@@ -263,6 +257,11 @@ input[type=range]:focus::-moz-range-track {
 }
 
 input[type=range].volume::-moz-range-thumb {
-  border: 1px solid #202020;
-  background: #202020;
+  border: 1px solid #fff;
+  background: #fff;
+}
+
+.fullscreen-button {
+  color: #fff;
+  padding-right: 20px;
 }
