--- a/src/app/video-display/video-display.component.html
+++ b/src/app/video-display/video-display.component.html
@@ -1,64 +1,59 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-12">
-      <video id="video" (click)="videoTogglePlayPause($event)"></video>
-      <div class="play-icon" [hidden]="video && !video.paused"
-        (click)="videoTogglePlayPause($event)"
-      ></div>
+      <div class="video-container" #videoContainer>
+        <video id="video"
+          (click)="videoTogglePlayPause($event)"
+          (volumechange)="updateVolumeIcon()"
+          (ended)="playNext()">
+        </video>
+        <div class="play-icon" [hidden]="video && !video.paused" (click)="videoTogglePlayPause($event)"></div>
 
-      <div class="controls">
-        <div class="time">
-          <time id="time-elapsed" [attr.datetime]="timeElapsedAttr">{{ timeElapsed || '00:00' }}</time>
-          <span> / </span>
-          <time id="duration" [attr.datetime]="durationAttr">{{ duration }}</time>
-        </div>
+        <div class="video-controls hidden" id="video-controls">
+          <div class="video-progress">
+            <progress id="progress-bar" value="0" min="0" [max]="video && video.duration ? video.duration : 0"
+              [value]="currentTime || '0'"></progress>
 
-        <div class="video-progress">
-          <progress id="progress-bar" value="0" min="0"
-            [max]="video && video.duration ? video.duration : 0"
-            [value]="currentTime || '0'"></progress>
+            <input class="seek" id="seek" min="0" type="range" step="1" [attr.seek]="skipToTooltip"
+              [max]="video && video.duration ? video.duration : 0" [value]="currentTime || '0'"
+              (mousemove)="updateSeekTooltip($event)" (mouseout)="seekTooltipHideToggle = true" (input)="skipAhead($event)">
 
-          <input class="seek" id="seek" min="0" type="range" step="1"
-            [attr.seek]="skipToTooltip"
-            [max]="video && video.duration ? video.duration : 0"
-            [value]="currentTime || '0'"
-            (mousemove)="updateSeekTooltip($event)"
-            (mouseout)="seekTooltipHideToggle = true"
-            (input)="skipAhead($event)">
+            <div class="seek-tooltip" id="seek-tooltip" [hidden]="seekTooltipHideToggle" [style.left]="seekTooltipLeft">
+              {{ seekTooltipText }}</div>
+          </div>
 
-          <div class="seek-tooltip" id="seek-tooltip"
-            [hidden]="seekTooltipHideToggle"
-            [style.left]="seekTooltipLeft"
-          >{{ seekTooltipText }}</div>
-        </div>
+          <div class="volume-controls">
+            <button data-title="Full screen (f)" class="fullscreen-button" id="fullscreen-button" (click)="toggleFullScreen()">
+              <fa-icon [icon]="faExpand"></fa-icon>
+            </button>
 
-        <div class="volume-controls">
-          <button class="volume-button" id="volume-button"
-            [attr.title]="volumeButtonTitle"
-            (click)="toggleMute()">
-            <span [hidden]="faVolumeUpToggle">
-              <fa-icon [icon]="faVolumeUp"></fa-icon>
-            </span>
-            <span [hidden]="faVolumeDownToggle">
-              <fa-icon [icon]="faVolumeDown"></fa-icon>
-            </span>
-            <span [hidden]="faVolumeMuteToggle">
-              <fa-icon [icon]="faVolumeMute"></fa-icon>
-            </span>
-          </button>
+            <button class="volume-button" id="volume-button" [attr.title]="volumeButtonTitle" (click)="toggleMute()">
+              <span [hidden]="faVolumeUpToggle">
+                <fa-icon [icon]="faVolumeUp"></fa-icon>
+              </span>
+              <span [hidden]="faVolumeDownToggle">
+                <fa-icon [icon]="faVolumeDown"></fa-icon>
+              </span>
+              <span [hidden]="faVolumeMuteToggle">
+                <fa-icon [icon]="faVolumeMute"></fa-icon>
+              </span>
+            </button>
 
-          <input class="volume" id="volume" value="1" type="range" max="1" min="0" step="0.01"
-            (input)="updateVolume()"
-            (volumechange)="updateVolumeIcon()"
-          >
+            <input class="volume" id="volume" type="range" max="1" min="0" step="0.01" [(ngModel)]="volume"
+              (input)="updateVolume()">
+          </div>
+
+          <div class="time">
+            <time id="time-elapsed" [attr.datetime]="timeElapsedAttr">{{ timeElapsed || '00:00' }}</time>
+            <span> / </span>
+            <time id="duration" [attr.datetime]="durationAttr">{{ duration }}</time>
+          </div>
+
         </div>
       </div>
-
     </div>
     <div class="col-md-5 col-sm-12">
-      <!-- <div class="video-list"> -->
-        <app-video-list></app-video-list>
-      <!-- </div> -->
+      <app-video-list></app-video-list>
     </div>
   </div>
 </div>
